# tiffwrap

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile
cmake/: clang-cmakeinit.cmake  gcc-cmakeinit.cmake
config/: tiffwrap_config.h.in
doc/: Doxyfile
include/: CMakeLists.txt  tiffwrap.h  tiffwrap_util.h
sample/: CMakeLists.txt  sample.cc
sample/src/: sample.cc
src/: CMakeLists.txt  tiffwrap.cc  tiffwrap_util.cc
test/: CMakeLists.txt
test/cmake/: doctest.cmake.in  gtest.cmake.in
test/include/: tiffwrap_test.h
test/src/: doctest_main.cc  gtest_main.cc  sample_test.cc  test_tiffwrap.cc
